# tmap2

./: .gitignore  README.md  pyproject.toml
notebooks/: 13_local_protein_structures.ipynb
src/tmap/: __init__.py  estimator.py
src/tmap/graph/: types.py
src/tmap/index/: usearch_index.py
src/tmap/utils/: proteins.py
src/tmap/visualization/: __init__.py  tmapviz.py
src/tmap/visualization/templates/: base.html.j2  protein.html.j2
tests/: test_graph.py  test_proteins.py  test_visualization.py
