[build-system]
requires = [
    "scikit-build-core>=0.8",
    "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "tmap2"
version = "0.2.1"
description = "Tree-based visualization for high-dimensional data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "Alejandro Flores", email = "afloresep01@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "datasketch>=1.6.0",
    "numba>=0.59",
    "xxhash>=3.0",
    "jinja2>=3.1",
    "matplotlib>=3.7",
    "pandas>=2.2",
    "usearch>=2.16,<3",
]

[project.optional-dependencies]
notebook = ["jupyter-scatter>=0.22.2"]
chemistry = ["rdkit>=2023.3"]
singlecell = ["anndata>=0.10"]
proteins = ["biopython>=1.80"]
all = [
    "jupyter-scatter>=0.22.2",
    "rdkit>=2023.3",
    "anndata>=0.10",
    "biopython>=1.80",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "matplotlib>=3.7",
    "biopython>=1.80",
]

[project.urls]
Homepage = "https://github.com/afloresep/tmap2"
Documentation = "https://github.com/afloresep/tmap2#readme"
Repository = "https://github.com/afloresep/tmap2"

[tool.scikit-build]
wheel.packages = ["src/tmap"]
cmake.build-type = "Release"
build.verbose = true
wheel.install-dir = "tmap/layout"

# Keep sdist lean: only source + build files, not dev/docs/tests
sdist.exclude = [
    "docs/",
    "examples/",
    "notebooks/",
    "tests/",
    ".github/",
]

[tool.scikit-build.cmake.define]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["extern/", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E741", "E743", "N802", "N803", "N806", "N814"]

[tool.ruff.lint.per-file-ignores]
"src/tmap/index/lsh_forest.py" = ["E741", "E743"]
"src/tmap/index/_lsh_numba.py" = ["E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=tmap"
